src/upsimulator/recognizer/UPLanguageParser.java
package upsimulator.recognizer;

// Generated from UPLanguage.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class UPLanguageParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, Integer=51, Double=52, 
		Letters=53, Name=54, COMMENT=55, WS=56;
	public static final int
		RULE_start = 0, RULE_environmentDef = 1, RULE_ruleSetDef = 2, RULE_ruleSetType = 3, 
		RULE_membraneDef = 4, RULE_membraneType = 5, RULE_properties = 6, RULE_propertyInit = 7, 
		RULE_propertyName = 8, RULE_propertyValue = 9, RULE_tunnels = 10, RULE_tunnelTarget = 11, 
		RULE_ruleSetDeclare = 12, RULE_ruleSetNamePrefix = 13, RULE_submembrane = 14, 
		RULE_membraneName = 15, RULE_objects = 16, RULE_objAssign = 17, RULE_objName = 18, 
		RULE_objNum = 19, RULE_prule = 20, RULE_ruleName = 21, RULE_condition = 22, 
		RULE_result = 23, RULE_memDivisionResult = 24, RULE_additionalResults = 25, 
		RULE_memCreateResult = 26, RULE_memDissolveResult = 27, RULE_propertyResult = 28, 
		RULE_objResult = 29, RULE_positionResult = 30, RULE_in = 31, RULE_out = 32, 
		RULE_here = 33, RULE_go = 34, RULE_andOpt = 35, RULE_orOpt = 36, RULE_all = 37, 
		RULE_random = 38, RULE_target = 39, RULE_boolCondition = 40, RULE_promoterCondition = 41, 
		RULE_inhibitorCondition = 42, RULE_propertyCondition = 43, RULE_objCondition = 44, 
		RULE_objConditionWithTarget = 45, RULE_priorityCondition = 46, RULE_priority = 47, 
		RULE_probabilisticCondition = 48, RULE_regCondition = 49, RULE_intDim = 50, 
		RULE_abcDim = 51, RULE_formulaDim = 52;
	public static final String[] ruleNames = {
		"start", "environmentDef", "ruleSetDef", "ruleSetType", "membraneDef", 
		"membraneType", "properties", "propertyInit", "propertyName", "propertyValue", 
		"tunnels", "tunnelTarget", "ruleSetDeclare", "ruleSetNamePrefix", "submembrane", 
		"membraneName", "objects", "objAssign", "objName", "objNum", "prule", 
		"ruleName", "condition", "result", "memDivisionResult", "additionalResults", 
		"memCreateResult", "memDissolveResult", "propertyResult", "objResult", 
		"positionResult", "in", "out", "here", "go", "andOpt", "orOpt", "all", 
		"random", "target", "boolCondition", "promoterCondition", "inhibitorCondition", 
		"propertyCondition", "objCondition", "objConditionWithTarget", "priorityCondition", 
		"priority", "probabilisticCondition", "regCondition", "intDim", "abcDim", 
		"formulaDim"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'Environment'", "'{'", "'}'", "'RuleSet'", "'Membrane'", "'extends'", 
		"','", "'Property'", "';'", "'='", "'+'", "'-'", "'Tunnel'", "'['", "']'", 
		"'Object'", "'^'", "'Rule'", "'/'", "'->'", "'|'", "'&'", "'divide'", 
		"'('", "')'", "':'", "'dissolve'", "'<'", "'>'", "'in'", "'out'", "'here'", 
		"'go'", "'all'", "'random'", "'%'", "'*'", "'&&'", "'||'", "'>='", "'=='", 
		"'!='", "'<='", "'\u2260'", "'@'", "'!'", "'in.'", "'go.'", "'probability'", 
		"'?'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, "Integer", "Double", "Letters", "Name", "COMMENT", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "UPLanguage.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public UPLanguageParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class StartContext extends ParserRuleContext {
		public EnvironmentDefContext environmentDef() {
			return getRuleContext(EnvironmentDefContext.class,0);
		}
		public List<MembraneDefContext> membraneDef() {
			return getRuleContexts(MembraneDefContext.class);
		}
		public MembraneDefContext membraneDef(int i) {
			return getRuleContext(MembraneDefContext.class,i);
		}
		public List<RuleSetDefContext> ruleSetDef() {
			return getRuleContexts(RuleSetDefContext.class);
		}
		public RuleSetDefContext ruleSetDef(int i) {
			return getRuleContext(RuleSetDefContext.class,i);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UPLanguageVisitor ) return ((UPLanguageVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__3 || _la==T__4) {
				{
				setState(108);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__4:
					{
					setState(106);
					membraneDef();
					}
					break;
				case T__3:
					{
					setState(107);
					ruleSetDef();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(112);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(113);
			environmentDef();
			setState(118);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__3 || _la==T__4) {
				{
				setState(116);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__4:
					{
					setState(114);
					membraneDef();
					}
					break;
				case T__3:
					{
					setState(115);
					ruleSetDef();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(120);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EnvironmentDefContext extends ParserRuleContext {
		public List<ObjectsContext> objects() {
			return getRuleContexts(ObjectsContext.class);
		}
		public ObjectsContext objects(int i) {
			return getRuleContext(ObjectsContext.class,i);
		}
		public List<PruleContext> prule() {
			return getRuleContexts(PruleContext.class);
		}
		public PruleContext prule(int i) {
			return getRuleContext(PruleContext.class,i);
		}
		public List<SubmembraneContext> submembrane() {
			return getRuleContexts(SubmembraneContext.class);
		}
		public SubmembraneContext submembrane(int i) {
			return getRuleContext(SubmembraneContext.class,i);
		}
		public List<RuleSetDeclareContext> ruleSetDeclare() {
			return getRuleContexts(RuleSetDeclareContext.class);
		}
		public RuleSetDeclareContext ruleSetDeclare(int i) {
			return getRuleContext(RuleSetDeclareContext.class,i);
		}
		public List<PropertiesContext> properties() {
			return getRuleContexts(PropertiesContext.class);
		}
		public PropertiesContext properties(int i) {
			return getRuleContext(PropertiesContext.class,i);
		}
		public EnvironmentDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_environmentDef; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UPLanguageVisitor ) return ((UPLanguageVisitor<? extends T>)visitor).visitEnvironmentDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EnvironmentDefContext environmentDef() throws RecognitionException {
		EnvironmentDefContext _localctx = new EnvironmentDefContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_environmentDef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(T__0);
			setState(122);
			match(T__1);
			setState(130);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__4) | (1L << T__7) | (1L << T__15) | (1L << T__17))) != 0)) {
				{
				setState(128);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__15:
					{
					setState(123);
					objects();
					}
					break;
				case T__17:
					{
					setState(124);
					prule();
					}
					break;
				case T__4:
					{
					setState(125);
					submembrane();
					}
					break;
				case T__3:
					{
					setState(126);
					ruleSetDeclare();
					}
					break;
				case T__7:
					{
					setState(127);
					properties();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(132);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(133);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RuleSetDefContext extends ParserRuleContext {
		public RuleSetTypeContext ruleSetType() {
			return getRuleContext(RuleSetTypeContext.class,0);
		}
		public List<PruleContext> prule() {
			return getRuleContexts(PruleContext.class);
		}
		public PruleContext prule(int i) {
			return getRuleContext(PruleContext.class,i);
		}
		public RuleSetDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ruleSetDef; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UPLanguageVisitor ) return ((UPLanguageVisitor<? extends T>)visitor).visitRuleSetDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RuleSetDefContext ruleSetDef() throws RecognitionException {
		RuleSetDefContext _localctx = new RuleSetDefContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_ruleSetDef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			match(T__3);
			setState(136);
			ruleSetType();
			setState(137);
			match(T__1);
			setState(141);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__17) {
				{
				{
				setState(138);
				prule();
				}
				}
				setState(143);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(144);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RuleSetTypeContext extends ParserRuleContext {
		public TerminalNode Name() { return getToken(UPLanguageParser.Name, 0); }
		public TerminalNode Letters() { return getToken(UPLanguageParser.Letters, 0); }
		public RuleSetTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ruleSetType; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UPLanguageVisitor ) return ((UPLanguageVisitor<? extends T>)visitor).visitRuleSetType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RuleSetTypeContext ruleSetType() throws RecognitionException {
		RuleSetTypeContext _localctx = new RuleSetTypeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_ruleSetType);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			_la = _input.LA(1);
			if ( !(_la==Letters || _la==Name) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MembraneDefContext extends ParserRuleContext {
		public List<MembraneTypeContext> membraneType() {
			return getRuleContexts(MembraneTypeContext.class);
		}
		public MembraneTypeContext membraneType(int i) {
			return getRuleContext(MembraneTypeContext.class,i);
		}
		public List<ObjectsContext> objects() {
			return getRuleContexts(ObjectsContext.class);
		}
		public ObjectsContext objects(int i) {
			return getRuleContext(ObjectsContext.class,i);
		}
		public List<PruleContext> prule() {
			return getRuleContexts(PruleContext.class);
		}
		public PruleContext prule(int i) {
			return getRuleContext(PruleContext.class,i);
		}
		public List<SubmembraneContext> submembrane() {
			return getRuleContexts(SubmembraneContext.class);
		}
		public SubmembraneContext submembrane(int i) {
			return getRuleContext(SubmembraneContext.class,i);
		}
		public List<RuleSetDeclareContext> ruleSetDeclare() {
			return getRuleContexts(RuleSetDeclareContext.class);
		}
		public RuleSetDeclareContext ruleSetDeclare(int i) {
			return getRuleContext(RuleSetDeclareContext.class,i);
		}
		public List<PropertiesContext> properties() {
			return getRuleContexts(PropertiesContext.class);
		}
		public PropertiesContext properties(int i) {
			return getRuleContext(PropertiesContext.class,i);
		}
		public MembraneDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_membraneDef; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UPLanguageVisitor ) return ((UPLanguageVisitor<? extends T>)visitor).visitMembraneDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MembraneDefContext membraneDef() throws RecognitionException {
		MembraneDefContext _localctx = new MembraneDefContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_membraneDef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			match(T__4);
			setState(149);
			membraneType();
			setState(159);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__5) {
				{
				setState(150);
				match(T__5);
				setState(151);
				membraneType();
				setState(156);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__6) {
					{
					{
					setState(152);
					match(T__6);
					setState(153);
					membraneType();
					}
					}
					setState(158);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(161);
			match(T__1);
			setState(169);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__4) | (1L << T__7) | (1L << T__15) | (1L << T__17))) != 0)) {
				{
				setState(167);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__15:
					{
					setState(162);
					objects();
					}
					break;
				case T__17:
					{
					setState(163);
					prule();
					}
					break;
				case T__4:
					{
					setState(164);
					submembrane();
					}
					break;
				case T__3:
					{
					setState(165);
					ruleSetDeclare();
					}
					break;
				case T__7:
					{
					setState(166);
					properties();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(171);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(172);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MembraneTypeContext extends ParserRuleContext {
		public TerminalNode Name() { return getToken(UPLanguageParser.Name, 0); }
		public TerminalNode Letters() { return getToken(UPLanguageParser.Letters, 0); }
		public MembraneTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_membraneType; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UPLanguageVisitor ) return ((UPLanguageVisitor<? extends T>)visitor).visitMembraneType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MembraneTypeContext membraneType() throws RecognitionException {
		MembraneTypeContext _localctx = new MembraneTypeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_membraneType);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(174);
			_la = _input.LA(1);
			if ( !(_la==Letters || _la==Name) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PropertiesContext extends ParserRuleContext {
		public List<PropertyInitContext> propertyInit() {
			return getRuleContexts(PropertyInitContext.class);
		}
		public PropertyInitContext propertyInit(int i) {
			return getRuleContext(PropertyInitContext.class,i);
		}
		public PropertiesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_properties; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UPLanguageVisitor ) return ((UPLanguageVisitor<? extends T>)visitor).visitProperties(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PropertiesContext properties() throws RecognitionException {
		PropertiesContext _localctx = new PropertiesContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_properties);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(176);
			match(T__7);
			setState(177);
			propertyInit();
			setState(182);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__6) {
				{
				{
				setState(178);
				match(T__6);
				setState(179);
				propertyInit();
				}
				}
				setState(184);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(185);
			match(T__8);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PropertyInitContext extends ParserRuleContext {
		public PropertyNameContext propertyName() {
			return getRuleContext(PropertyNameContext.class,0);
		}
		public PropertyValueContext propertyValue() {
			return getRuleContext(PropertyValueContext.class,0);
		}
		public PropertyInitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_propertyInit; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UPLanguageVisitor ) return ((UPLanguageVisitor<? extends T>)visitor).visitPropertyInit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PropertyInitContext propertyInit() throws RecognitionException {
		PropertyInitContext _localctx = new PropertyInitContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_propertyInit);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(187);
			propertyName();
			setState(188);
			match(T__9);
			setState(189);
			propertyValue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PropertyNameContext extends ParserRuleContext {
		public TerminalNode Name() { return getToken(UPLanguageParser.Name, 0); }
		public TerminalNode Letters() { return getToken(UPLanguageParser.Letters, 0); }
		public PropertyNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_propertyName; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UPLanguageVisitor ) return ((UPLanguageVisitor<? extends T>)visitor).visitPropertyName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PropertyNameContext propertyName() throws RecognitionException {
		PropertyNameContext _localctx = new PropertyNameContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_propertyName);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(191);
			_la = _input.LA(1);
			if ( !(_la==Letters || _la==Name) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PropertyValueContext extends ParserRuleContext {
		public TerminalNode Letters() { return getToken(UPLanguageParser.Letters, 0); }
		public TerminalNode Integer() { return getToken(UPLanguageParser.Integer, 0); }
		public PropertyValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_propertyValue; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UPLanguageVisitor ) return ((UPLanguageVisitor<? extends T>)visitor).visitPropertyValue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PropertyValueContext propertyValue() throws RecognitionException {
		PropertyValueContext _localctx = new PropertyValueContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_propertyValue);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(193);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__10) | (1L << T__11) | (1L << Integer) | (1L << Letters))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TunnelsContext extends ParserRuleContext {
		public List<TunnelTargetContext> tunnelTarget() {
			return getRuleContexts(TunnelTargetContext.class);
		}
		public TunnelTargetContext tunnelTarget(int i) {
			return getRuleContext(TunnelTargetContext.class,i);
		}
		public TunnelsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tunnels; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UPLanguageVisitor ) return ((UPLanguageVisitor<? extends T>)visitor).visitTunnels(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TunnelsContext tunnels() throws RecognitionException {
		TunnelsContext _localctx = new TunnelsContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_tunnels);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(195);
			match(T__12);
			setState(196);
			tunnelTarget();
			setState(201);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__6) {
				{
				{
				setState(197);
				match(T__6);
				setState(198);
				tunnelTarget();
				}
				}
				setState(203);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(204);
			match(T__8);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TunnelTargetContext extends ParserRuleContext {
		public MembraneNameContext membraneName() {
			return getRuleContext(MembraneNameContext.class,0);
		}
		public List<IntDimContext> intDim() {
			return getRuleContexts(IntDimContext.class);
		}
		public IntDimContext intDim(int i) {
			return getRuleContext(IntDimContext.class,i);
		}
		public TunnelTargetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tunnelTarget; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UPLanguageVisitor ) return ((UPLanguageVisitor<? extends T>)visitor).visitTunnelTarget(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TunnelTargetContext tunnelTarget() throws RecognitionException {
		TunnelTargetContext _localctx = new TunnelTargetContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_tunnelTarget);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(206);
			membraneName();
			setState(213);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__13) {
				{
				{
				setState(207);
				match(T__13);
				setState(208);
				intDim();
				setState(209);
				match(T__14);
				}
				}
				setState(215);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RuleSetDeclareContext extends ParserRuleContext {
